Comprovar q no likejes els teus posts i comments, arreglar alguna cosa del yaml, arreglar error de upvote post, arreglar el model de new amb arbre de comentaris
