# api/api.yaml
@@ -6,8 +6,8 @@ info:
   description: "This is the Open API documentation for our Hacker News clone's REST API, deployed at <https://arcane-journey-15614.herokuapp.com/>. <br><br><br>brrrr COMPLETAR!<br><br>All operations are executable. Only one operation requires authentication: `deleteTweet`. In this case, you must **Authorize** your request by providing the api_key vaule you got when you created the tweet."
 servers:
   #heroku. comentar aquest i posar el vostre a la altra linea per a testejar a AWS
-  - url: 'https://arcane-journey-15614.herokuapp.com/api/'
-  #- url: 'http://3.89.43.10:8080/api/'  #inserir aqui la IP del vostre Cloud9
+  #- url: 'https://arcane-journey-15614.herokuapp.com/api/'
+  - url: 'http://52.90.217.162:8080/api/'  #inserir aqui la IP del vostre Cloud9
   #http://3.86.16.176/api/
 paths:
   /news/{id}:
@@ -15,7 +15,7 @@ paths:
       tags:
       - news
       summary: Returns a specific new
-      description: Returns a specific new, identified by id
+      description: Returns a specific new, identified by id; with its thread of comments.
       operationId: getInfoNew
       parameters:
       - name: token
@@ -27,7 +27,7 @@ paths:
       - name: id
         in: path
         description: ID of the new to return
-        required: true  #not sure. potser tindrem un get /news per llistes? 
+        required: true
         schema:
           type: integer
           format: int64 #nose
@@ -37,7 +37,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/New'
+                $ref: '#/components/schemas/NewWithComments'
         404:
           description: 'Error: New not Found'
           content:
@@ -56,130 +56,6 @@ paths:
               examples:
                 errorExample:
                   $ref: '#/components/examples/error401'
-
-
-  /news/upvote:
-    post:
-      tags:
-      - upvotes
-      summary: Upvote a specific new
-      description: Upvote a specific new, identified by the newid parameter
-      operationId: upvote
-      requestBody:
-        description: Provide the id of the new you want to upvote
-        content:
-          application/json:
-            schema:
-              required:
-              - newid
-              type: object
-              properties:
-                newid:
-                  type: integer
-                  minLength: 1
-                  example: 2
-        required: true
-      parameters:
-      - name: token
-        in: header
-        description: user's auth. token (API key)
-        required: true
-        schema:
-          type: string
-        
-      responses:
-        200:
-          description: success
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:     #not sure de si les propietats son aquestes
-                  status:
-                    type: integer
-                    example: 200
-                  message: 
-                    type: string
-                    example: 'New with ID 2 upvoted successfully'
-          
-        409:
-          description: 'conflict: New has already been upvoted by user'
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResult'
-              examples:
-                errorExample:
-                  $ref: '#/components/examples/error409voteNew'
-        401:
-          description: 'Unauthorized: Invalid API key or no API key provided'
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResult'
-              examples:
-                errorExample:
-                  $ref: '#/components/examples/error401'
-        400:
-          description: 'no newid specified (query)'
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResult'
-              examples:
-                errorExample:
-                  $ref: '#/components/examples/error400voteNew'
-         
-    delete:
-      tags:
-      - upvotes
-      summary: Unvote a specific new
-      description: Unvote a specific new (remove the vote). The new is identified by the newid parameter
-      operationId: unvote
-      parameters:
-      - name: newid
-        in: query
-        description: ID of the new to unvote
-        required: true
-        schema:
-          type: integer
-          format: int64 #nose
-      - name: token
-        in: header
-        description: user's auth. token (API key)
-        required: true
-        schema:
-          type: string
-      responses:
-        204:
-          description: success    #en principi no té body. esperant mail lidia
-        404:
-          description: error. User has not upvoted a new with the specified ID
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResult'
-              examples:
-                errorExample:
-                  $ref: '#/components/examples/error404new'
-        401:
-          description: 'Unauthorized: Invalid API key or no API key provided'
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResult'
-              examples:
-                errorExample:
-                  $ref: '#/components/examples/error401'
-        400:
-          description: 'no newid specified (query)'
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResult'
-              examples:
-                errorExample:
-                  $ref: '#/components/examples/error400voteNew'
   
   /news/new:
     get:
@@ -408,6 +284,129 @@ paths:
                   $ref: '#/components/examples/error401'
                   
 
+  /news/upvote:
+    post:
+      tags:
+      - news
+      summary: Upvote a specific new
+      description: Upvote a specific new, identified by the newid parameter
+      operationId: upvote
+      requestBody:
+        description: Provide the id of the new you want to upvote
+        content:
+          application/json:
+            schema:
+              required:
+              - newid
+              type: object
+              properties:
+                newid:
+                  type: integer
+                  minLength: 1
+                  example: 2
+        required: true
+      parameters:
+      - name: token
+        in: header
+        description: user's auth. token (API key)
+        required: true
+        schema:
+          type: string
+        
+      responses:
+        200:
+          description: success
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:     #not sure de si les propietats son aquestes
+                  status:
+                    type: integer
+                    example: 200
+                  message: 
+                    type: string
+                    example: 'New with ID 2 upvoted successfully'
+          
+        409:
+          description: 'conflict: New has already been upvoted by user'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResult'
+              examples:
+                errorExample:
+                  $ref: '#/components/examples/error409voteNew'
+        401:
+          description: 'Unauthorized: Invalid API key or no API key provided'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResult'
+              examples:
+                errorExample:
+                  $ref: '#/components/examples/error401'
+        400:
+          description: 'no newid specified (query)'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResult'
+              examples:
+                errorExample:
+                  $ref: '#/components/examples/error400voteNew'
+         
+    delete:
+      tags:
+      - news
+      summary: Unvote a specific new
+      description: Unvote a specific new (remove the vote). The new is identified by the newid parameter
+      operationId: unvote
+      parameters:
+      - name: newid
+        in: query
+        description: ID of the new to unvote
+        required: true
+        schema:
+          type: integer
+          format: int64 #nose
+      - name: token
+        in: header
+        description: user's auth. token (API key)
+        required: true
+        schema:
+          type: string
+      responses:
+        204:
+          description: success
+        404:
+          description: error. User has not upvoted a new with the specified ID
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResult'
+              examples:
+                errorExample:
+                  $ref: '#/components/examples/error404new'
+        401:
+          description: 'Unauthorized: Invalid API key or no API key provided'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResult'
+              examples:
+                errorExample:
+                  $ref: '#/components/examples/error401'
+        400:
+          description: 'no newid specified (query)'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResult'
+              examples:
+                errorExample:
+                  $ref: '#/components/examples/error400voteNew'
+
   /users/profile:
     put:
       tags:
@@ -459,7 +458,7 @@ paths:
     get:
       tags:
       - users
-      summary: Show the information of a specific user
+      summary: Show the user's information
       description: Show the information of the auth user (my information as user).
       operationId: getProfile
       parameters:
@@ -602,8 +601,8 @@ paths:
     get:
       tags:
       - comments
-      summary: Returns a list of user comments 
-      description: Returns a list user comments either by the authed user or by the specified email
+      summary: Returns a list of user comments
+      description: Returns a list of user comments either by the authed user or by the specified email
       operationId: threads
       parameters:
         - name: token
@@ -699,14 +698,14 @@ paths:
               - new_id
               type: object
               properties:
-                new_id:
+                comment_id:
                   type: integer
                   minLength: 1
                   example: 1
                 text:
                   type: string
                   minLength: 1
-                  example: 'This post is incredible! Thank you for the info'
+                  example: 'This comment is so offensive! You may delete it'
         required: true
       parameters:
       - name: token
@@ -758,14 +757,14 @@ paths:
               - comment_id
               type: object
               properties:
-                comment_id:
+                new_id:
                   type: integer
                   minLength: 1
                   example: 1
                 text:
                   type: string
                   minLength: 1
-                  example: 'This comment is so offensive! You may delete it'
+                  example: 'This post is incredible! Thank you for the info'
         required: true
       parameters:
       - name: token
@@ -960,6 +959,79 @@ components:
           type: integer
           format: int64
           example: 4
+          
+      
+    NewWithComments:
+      type: object
+      properties:
+        new:
+          type: object
+          properties:
+            id:
+              type: integer
+              format: int64
+              example: 3
+            title:
+              type: string
+              example: 'Amazing new title'
+            url:
+              type: string
+              example: 'https://web.whatsapp.com/'
+            text:
+              type: string  #suposo q al json sera string. era de tipus text
+              example: 'this is a text. hey'
+            isurl:
+              type: integer
+              format: int64
+              example: 1
+            points:
+              type: integer
+              format: int64
+              example: 70
+            created_at:
+              type: string
+              format: date-time
+              example: '2021-05-05 15:47:32.238268000 +0000'
+            updated_at:
+              type: string
+              format: date-time
+              example: '2021-05-05 15:47:32.238268000 +0000'
+            user_id:
+              type: integer
+              format: int64
+              example: 4
+        comments:
+          type: object
+          properties:
+            comment:
+              type: object
+              properties:
+                id: 
+                  type: integer
+                  example: 2
+                text:
+                  type: string
+                  example: "M'ha agradat molt la teva aportació al fòrum de l'assignatura. Aquí tens una píndola."
+                created_at:
+                  type: string
+                  format: date-time
+                  example: '2021-05-05 15:47:32.238268000 +0000'
+                updated_at:
+                  type: string
+                  format: date-time
+                  example: '2021-05-05 15:47:32.238268000 +0000'
+                user_id:
+                  type: integer
+                  format: int64
+                  example: 4
+                comment_id:
+                  type: integer
+                  example: 13
+                new_id:
+                  type: integer
+                  example: 2
+            replies:
+              type: object
           
     Comment:
       type: object
